--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </div>
     <footer>
         <div class="icons">
-            <i class="fa" onclick="window.location.href='https://www.instagram.com/mohammed_sakr99/';">&#xf16d;</i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <i style="color: rgb(28, 28, 175);" class="fa" onclick="window.location.href='https://www.facebook.com/profile.php?id=100010760282302';">&#xf082;</i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <i class="fa" onclick="window.location.href='https://instagram.com/sarahatef472?utm_medium=copy_link;';">&#xf16d;</i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            <i style="color: rgb(28, 28, 175);" class="fa" onclick="window.location.href='https://www.facebook.com/profile.php?id=100007341450806';">&#xf082;</i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
             <i class="fa" onclick="window.location.href='https://mail.google.com/mail/u/1/#inbox';">&#xf2b3;</i>
         </div>
